src/main/generated/me/vovak/antlr/parser/RubyParser.java
// Generated from RubyParser.g4 by ANTLR 4.7.1
package me.vovak.antlr.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RubyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		HereDoc1=1, HereDoc2=2, HereDoc3=3, PercentString=4, ALIAS=5, BEGIN=6, 
		BEGIN_BLOCK=7, BREAK=8, CASE=9, CLASS=10, DEF=11, DEFINED=12, DO=13, ELSE=14, 
		ELSIF=15, END_BLOCK=16, END=17, ENSURE=18, FALSE=19, FOR=20, IF=21, IN=22, 
		MODULE=23, NEXT=24, NIL=25, NOT=26, RAISE=27, REDO=28, RESCUE=29, RETRY=30, 
		RETURN=31, SELF=32, SUPER=33, THEN=34, TRUE=35, UNDEF=36, UNLESS=37, UNTIL=38, 
		WHEN=39, WHILE=40, YIELD=41, Integer=42, Float=43, Regex=44, String=45, 
		DollarSpecial=46, CRLF=47, AND=48, OR=49, PLUS=50, MINUS=51, MOD=52, PLUS_ASSIGN=53, 
		MOD_ASSIGN=54, SHARP=55, AND_ASSIGN=56, BIT_AND_ASSIGN=57, ANDDOT=58, 
		BIT_AND=59, EXP_ASSIGN=60, EXP=61, MUL=62, MUL_ASSIGN=63, DOLLAR=64, AT=65, 
		RIGHT_PAREN=66, LEFT_PAREN=67, RIGHT_SBRACKET=68, LEFT_SBRACKET=69, RIGHT_RBRACKET=70, 
		LEFT_RBRACKET=71, DOT3=72, DOT2=73, DOT=74, DIV_ASSIGN=75, DIV=76, QUESTION=77, 
		NOT_EQUAL=78, SIGH=79, COLON=80, COLON2=81, SEMICOLON=82, COMMA=83, MINUS_ASSIGN=84, 
		OR_ASSIGN=85, BIT_OR_ASSIGN=86, BIT_OR=87, BIT_SHR_ASSIGN=88, GREATER_EQUAL=89, 
		BIT_SHR=90, GREATER=91, ASSIGN=92, ASSOC=93, EQUAL3=94, EQUAL=95, PATTERN_MATCH=96, 
		LESS_EQUAL=97, LESS=98, BIT_SHL_ASSIGN=99, BIT_SHL=100, BIT_NOT_ASSIGN=101, 
		BIT_NOT=102, BIT_XOR_ASSIGN=103, BIT_XOR=104, SL_COMMENT=105, ML_COMMENT=106, 
		WS=107, Identifier=108, ShellCommand=109, HereDocEnd1=110, HereDocEnd2=111, 
		AnyInHere=112, SL_COMMENT_IN_HEREDOC=113, ML_COMMENT_IN_HEREDOC=114, PercentStringLineEnd=115, 
		AnyInQuotedString1=116, AnyInQuotedString2=117;
	public static final int
		RULE_compilation_unit = 0, RULE_statement_list_terms = 1, RULE_statement_list_noterms = 2, 
		RULE_statement = 3, RULE_undef_statement = 4, RULE_alias_statement = 5, 
		RULE_function_name_or_symbol = 6, RULE_begin_block = 7, RULE_end_block = 8, 
		RULE_module_definition = 9, RULE_class_definition = 10, RULE_superclass = 11, 
		RULE_class_header = 12, RULE_function_definition = 13, RULE_function_definition_header = 14, 
		RULE_function_name = 15, RULE_function_definition_params = 16, RULE_function_definition_param = 17, 
		RULE_function_call_param = 18, RULE_expr = 19, RULE_expr_statement_suffix = 20, 
		RULE_primary = 21, RULE_func_call_parameters = 22, RULE_func_call_parameters_no_bracket = 23, 
		RULE_rescure_param = 24, RULE_case_body = 25, RULE_when_cond = 26, RULE_if_tail = 27, 
		RULE_else_tail = 28, RULE_dot_ref = 29, RULE_logicalOperator = 30, RULE_equalsOperator = 31, 
		RULE_compareOperator = 32, RULE_bitOperator = 33, RULE_mathOperator = 34, 
		RULE_assignOperator = 35, RULE_not = 36, RULE_block = 37, RULE_block_params = 38, 
		RULE_id_symbol = 39, RULE_symbol = 40, RULE_hash_asso = 41, RULE_variable_path = 42, 
		RULE_cpath = 43, RULE_literal = 44, RULE_identifier = 45, RULE_empty = 46, 
		RULE_globalVar = 47, RULE_classVar = 48, RULE_instanceVar = 49, RULE_idArg = 50, 
		RULE_do_keyword = 51, RULE_then_keyword = 52, RULE_string = 53, RULE_crlfs = 54, 
		RULE_terms = 55, RULE_term = 56;
	public static final String[] ruleNames = {
		"compilation_unit", "statement_list_terms", "statement_list_noterms", 
		"statement", "undef_statement", "alias_statement", "function_name_or_symbol", 
		"begin_block", "end_block", "module_definition", "class_definition", "superclass", 
		"class_header", "function_definition", "function_definition_header", "function_name", 
		"function_definition_params", "function_definition_param", "function_call_param", 
		"expr", "expr_statement_suffix", "primary", "func_call_parameters", "func_call_parameters_no_bracket", 
		"rescure_param", "case_body", "when_cond", "if_tail", "else_tail", "dot_ref", 
		"logicalOperator", "equalsOperator", "compareOperator", "bitOperator", 
		"mathOperator", "assignOperator", "not", "block", "block_params", "id_symbol", 
		"symbol", "hash_asso", "variable_path", "cpath", "literal", "identifier", 
		"empty", "globalVar", "classVar", "instanceVar", "idArg", "do_keyword", 
		"then_keyword", "string", "crlfs", "terms", "term"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, "'alias'", "'begin'", "'BEGIN'", "'break'", 
		"'case'", "'class'", "'def'", "'defined?'", "'do'", "'else'", "'elsif'", 
		"'END'", "'end'", "'ensure'", "'false'", "'for'", "'if'", "'in'", "'module'", 
		"'next'", "'nil'", "'not'", "'raise'", "'redo'", "'rescue'", "'retry'", 
		"'return'", "'self'", "'super'", "'then'", "'true'", "'undef'", "'unless'", 
		"'until'", "'when'", "'while'", "'yield'", null, null, null, null, null, 
		null, null, null, "'+'", "'-'", "'%'", "'+='", "'%='", "'#'", "'&&='", 
		"'&='", "'&.'", "'&'", "'**='", "'**'", "'*'", "'*='", "'$'", "'@'", "'}'", 
		"'{'", "']'", "'['", "')'", "'('", "'...'", "'..'", "'.'", "'/='", "'/'", 
		"'?'", "'!='", "'!'", "':'", "'::'", "';'", "','", "'-='", "'||='", "'|='", 
		"'|'", "'>>='", "'>='", "'>>'", "'>'", "'='", "'=>'", "'==='", "'=='", 
		"'=~'", "'<='", "'<'", "'<<='", "'<<'", "'~='", "'~'", "'^='", "'^'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "HereDoc1", "HereDoc2", "HereDoc3", "PercentString", "ALIAS", "BEGIN", 
		"BEGIN_BLOCK", "BREAK", "CASE", "CLASS", "DEF", "DEFINED", "DO", "ELSE", 
		"ELSIF", "END_BLOCK", "END", "ENSURE", "FALSE", "FOR", "IF", "IN", "MODULE", 
		"NEXT", "NIL", "NOT", "RAISE", "REDO", "RESCUE", "RETRY", "RETURN", "SELF", 
		"SUPER", "THEN", "TRUE", "UNDEF", "UNLESS", "UNTIL", "WHEN", "WHILE", 
		"YIELD", "Integer", "Float", "Regex", "String", "DollarSpecial", "CRLF", 
		"AND", "OR", "PLUS", "MINUS", "MOD", "PLUS_ASSIGN", "MOD_ASSIGN", "SHARP", 
		"AND_ASSIGN", "BIT_AND_ASSIGN", "ANDDOT", "BIT_AND", "EXP_ASSIGN", "EXP", 
		"MUL", "MUL_ASSIGN", "DOLLAR", "AT", "RIGHT_PAREN", "LEFT_PAREN", "RIGHT_SBRACKET", 
		"LEFT_SBRACKET", "RIGHT_RBRACKET", "LEFT_RBRACKET", "DOT3", "DOT2", "DOT", 
		"DIV_ASSIGN", "DIV", "QUESTION", "NOT_EQUAL", "SIGH", "COLON", "COLON2", 
		"SEMICOLON", "COMMA", "MINUS_ASSIGN", "OR_ASSIGN", "BIT_OR_ASSIGN", "BIT_OR", 
		"BIT_SHR_ASSIGN", "GREATER_EQUAL", "BIT_SHR", "GREATER", "ASSIGN", "ASSOC", 
		"EQUAL3", "EQUAL", "PATTERN_MATCH", "LESS_EQUAL", "LESS", "BIT_SHL_ASSIGN", 
		"BIT_SHL", "BIT_NOT_ASSIGN", "BIT_NOT", "BIT_XOR_ASSIGN", "BIT_XOR", "SL_COMMENT", 
		"ML_COMMENT", "WS", "Identifier", "ShellCommand", "HereDocEnd1", "HereDocEnd2", 
		"AnyInHere", "SL_COMMENT_IN_HEREDOC", "ML_COMMENT_IN_HEREDOC", "PercentStringLineEnd", 
		"AnyInQuotedString1", "AnyInQuotedString2"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RubyParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RubyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Compilation_unitContext extends ParserRuleContext {
		public Statement_list_termsContext statement_list_terms() {
			return getRuleContext(Statement_list_termsContext.class,0);
		}
		public Compilation_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilation_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RubyParserListener ) ((RubyParserListener)listener).enterCompilation_unit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RubyParserListener ) ((RubyParserListener)listener).exitCompilation_unit(this);
		}
	}

	public final Compilation_unitContext compilation_unit() throws RecognitionException {
		Compilation_unitContext _localctx = new Compilation_unitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilation_unit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			statement_list_terms(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement_list_termsContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TermsContext terms() {
			return getRuleContext(TermsContext.class,0);
		}
		public Statement_list_termsContext statement_list_terms() {
			return getRuleContext(Statement_list_termsContext.class,0);
		}
		public Statement_list_termsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_list_terms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RubyParserListener ) ((RubyParserListener)listener).enterStatement_list_terms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RubyParserListener ) ((RubyParserListener)listener).exitStatement_list_terms(this);
		}
	}

	public final Statement_list_termsContext statement_list_terms() throws RecognitionException {
		return statement_list_terms(0);
	}

	private Statement_list_termsContext statement_list_terms(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Statement_list_termsContext _localctx = new Statement_list_termsContext(_ctx, _parentState);
		Statement_list_termsContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_statement_list_terms, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ALIAS:
			case BEGIN:
			case BEGIN_BLOCK:
			case BREAK:
			case CASE:
			case CLASS:
			case DEF:
			case DEFINED:
			case END_BLOCK:
			case ENSURE:
			case FALSE:
			case FOR:
			case IF:
			case MODULE:
			case NEXT:
			case NIL:
			case NOT:
			case RAISE:
			case REDO:
			case RESCUE:
			case RETRY:
			case RETURN:
			case SELF:
			case SUPER:
			case TRUE:
			case UNDEF:
			case UNLESS:
			case UNTIL:
			case WHEN:
			case WHILE:
			case YIELD:
			case Integer:
			case Float:
			case Regex:
			case String:
			case DollarSpecial:
			case AND:
			case OR:
			case PLUS:
			case MINUS:
			case MOD:
			case PLUS_ASSIGN:
			case MOD_ASSIGN:
			case AND_ASSIGN:
			case BIT_AND_ASSIGN:
			case BIT_AND:
			case EXP_ASSIGN:
			case EXP:
			case MUL:
			case MUL_ASSIGN:
			case DOLLAR:
			case AT:
			case LEFT_PAREN:
			case LEFT_SBRACKET:
			case LEFT_RBRACKET:
			case DIV_ASSIGN:
			case DIV:
			case NOT_EQUAL:
			case SIGH:
			case COLON:
			case COLON2:
			case MINUS_ASSIGN:
			case OR_ASSIGN:
			case BIT_OR_ASSIGN:
			case BIT_OR:
			case BIT_SHR_ASSIGN:
			case GREATER_EQUAL:
			case BIT_SHR:
			case GREATER:
			case EQUAL3:
			case EQUAL:
			case LESS_EQUAL:
			case LESS:
			case BIT_SHL_ASSIGN:
			case BIT_SHL:
			case BIT_NOT_ASSIGN:
			case BIT_NOT:
			case BIT_XOR_ASSIGN:
			case BIT_XOR:
			case Identifier:
			case ShellCommand:
				{
				setState(117);
				statement();
				setState(118);
				terms();
				}
				break;
			case CRLF:
			case SEMICOLON:
			case SL_COMMENT:
				{
				setState(120);
				terms();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(129);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Statement_list_termsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_statement_list_terms);
					setState(123);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(124);
					statement();
					setState(125);
					terms();
					}
					} 
				}
				setState(131);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Statement_list_notermsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TermsContext> terms() {
			return getRuleContexts(TermsContext.class);
		}
		public TermsContext terms(int i) {
			return getRuleContext(TermsContext.class,i);
		}
		public Statement_list_notermsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement_list_noterms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RubyParserListener ) ((RubyParserListener)listener).enterStatement_list_noterms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RubyParserListener ) ((RubyParserListener)listener).exitStatement_list_noterms(this);
		}
	}

	public final Statement_list_notermsContext statement_list_noterms() throws RecognitionException {
		Statement_list_notermsContext _localctx = new Statement_list_notermsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement_list_noterms);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(132);
					statement();
					setState(133);
					terms();
					}
					} 
				}
				setState(139);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(140);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Begin_blockContext begin_block() {
			return getRuleContext(Begin_blockContext.class,0);
		}
		public End_blockContext end_block() {
			return getRuleContext(End_blockContext.class,0);
		}
		public Alias_statementContext alias_statement() {
			return getRuleContext(Alias_statementContext.class,0);
		}
		public Undef_statementContext undef_statement() {
			return getRuleContext(Undef_statementContext.class,0);
		}
		public TerminalNode ENSURE() { return getToken(RubyParser.ENSURE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RubyParserListener ) ((RubyParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RubyParserListener ) ((RubyParserListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BEGIN_BLOCK:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				begin_block();
				}
				break;
			case END_BLOCK:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				end_block();
				}
				break;
			case ALIAS:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				alias_statement();
				}
				break;
			case UNDEF:
				enterOuterAlt(_localctx, 4);
				{
				setState(145);
				undef_statement();
				}
				break;
			case ENSURE:
				enterOuterAlt(_localctx, 5);
				{
				setState(146);
				match(ENSURE);
				}
				break;
			case BEGIN:
			case BREAK:
			case CASE:
			case CLASS:
			case DEF:
			case DEFINED:
			case FALSE:
			case FOR:
			case IF:
			case MODULE:
			case NEXT:
			case NIL:
			case NOT:
			case RAISE:
			case REDO:
			case RESCUE:
			case RETRY:
			case RETURN:
			case SELF:
			case SUPER:
			case TRUE:
			case UNLESS:
			case UNTIL:
			case WHEN:
			case WHILE:
			case YIELD:
			case Integer:
			case Float:
			case Regex:
			case String:
			case DollarSpecial:
			case AND:
			case OR:
			case PLUS:
			case MINUS:
			case MOD:
			case PLUS_ASSIGN:
			case MOD_ASSIGN:
			case AND_ASSIGN:
			case BIT_AND_ASSIGN:
			case BIT_AND:
			case EXP_ASSIGN:
			case EXP:
			case MUL:
			case MUL_ASSIGN:
			case DOLLAR:
			case AT:
			case LEFT_PAREN:
			case LEFT_SBRACKET:
			case LEFT_RBRACKET:
			case DIV_ASSIGN:
			case DIV:
			case NOT_EQUAL:
			case SIGH:
			case COLON:
			case COLON2:
			case MINUS_ASSIGN:
			case OR_ASSIGN:
			case BIT_OR_ASSIGN:
			case BIT_OR:
			case BIT_SHR_ASSIGN:
			case GREATER_EQUAL:
			case BIT_SHR:
			case GREATER:
			case EQUAL3:
			case EQUAL:
			case LESS_EQUAL:
			case LESS:
			case BIT_SHL_ASSIGN:
			case BIT_SHL:
			case BIT_NOT_ASSIGN:
			case BIT_NOT:
			case BIT_XOR_ASSIGN:
			case BIT_XOR:
			case Identifier:
			case ShellCommand:
				enterOuterAlt(_localctx, 6);
				{
				setState(147);
				expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
